fix: awkward gap when friends tile is enabled with multiple friends rows & connections carousel disabled

--- a/src/scss/entry/home.scss
+++ b/src/scss/entry/home.scss
@@ -178,6 +178,7 @@
 
             > div {
                 width: 110px;
+                margin: 0;
             }
         }
     }
